fix(grid): header cells not aligned to body cells
Fixes an isssue where header cells may not be aligned with the body
cells in the respective column. Fixes an issue where the fitlering ui
will be hidden in IE11 and Edge.

Closes #1044

--- a/src/core/styles/components/_common/_igx-display-container.scss
+++ b/src/core/styles/components/_common/_igx-display-container.scss
@@ -1,8 +1,9 @@
 ﻿%display-container {
     display: inherit;
     position: relative;
-    width: calc(100% - 18px);
+    width: 100%;
     overflow: hidden;
+    z-index: 0;
 }
 
 %display-container--inactive {
