--- a/src/core/styles/components/_common/_igx-vhelper.scss
+++ b/src/core/styles/components/_common/_igx-vhelper.scss
@@ -1,6 +1,7 @@
 %vhelper-display {
     display: block;
     overflow: auto;
+    z-index: 1;
 }
 
 %vhelper--vertical {
